added compents for profile view added connect kit t replace farcater

--- a/packages/client/src/app/globals.css
+++ b/packages/client/src/app/globals.css
@@ -11,6 +11,10 @@ body {
   -ms-overflow-style: none; /* IE and Edge */
 }
 
+main {
+  @apply min-h-screen w-screen;
+}
+
 h1,
 h2 {
   font-family: var(--font-sora);
