--- a/packages/client/src/app/globals.css
+++ b/packages/client/src/app/globals.css
@@ -20,6 +20,14 @@ h2 {
   font-family: var(--font-sora);
 }
 
+h2 {
+  @apply font-bold text-4xl;
+}
+
+h3 {
+  @apply font-bold text-2xl;
+}
+
 ::-webkit-scrollbar {
   display: none;
 }
