--- a/packages/client/src/app/globals.css
+++ b/packages/client/src/app/globals.css
@@ -21,11 +21,11 @@ h2 {
 }
 
 h2 {
-  @apply font-bold text-4xl;
+  @apply text-4xl font-bold;
 }
 
 h3 {
-  @apply font-bold text-2xl;
+  @apply text-2xl font-bold;
 }
 
 ::-webkit-scrollbar {
@@ -39,17 +39,17 @@ h3 {
 }
 
 .toaster {
-  @apply p-2 rounded-lg;
+  @apply rounded-lg p-2;
 }
 
 .toaster-loading {
-  @apply p-2 rounded-lg;
+  @apply rounded-lg p-2;
 }
 
 .toaster-error {
-  @apply p-2 rounded-lg;
+  @apply rounded-lg p-2;
 }
 
 .toaste-success {
-  @apply p-2 rounded-lg;
+  @apply rounded-lg p-2;
 }
