--- a/packages/client/src/app/globals.css
+++ b/packages/client/src/app/globals.css
@@ -28,6 +28,30 @@ h3 {
   @apply text-2xl font-bold;
 }
 
+h4 {
+  @apply text-xl font-bold;
+}
+
+button {
+  @apply min-w-32 rounded-full px-4 py-3 font-semibold leading-snug transition-colors duration-200 ease-in-out;
+}
+
+button:disabled {
+  @apply cursor-not-allowed bg-gray-300 text-gray-500;
+}
+
+button:disabled:hover {
+  @apply bg-gray-300 text-gray-500;
+}
+
+.button-primary {
+  @apply bg-sky-700 text-white hover:bg-sky-800;
+}
+
+.button-secondary {
+  @apply border border-sky-700 bg-white text-sky-700 hover:bg-sky-700 hover:text-white;
+}
+
 ::-webkit-scrollbar {
   display: none;
 }
