--- a/packages/client/src/app/globals.css
+++ b/packages/client/src/app/globals.css
@@ -2,17 +2,20 @@
 @tailwind components;
 @tailwind utilities;
 
-@media (prefers-color-scheme: dark) {
-}
-
 body {
   font-family: var(--font-inter);
   scrollbar-width: none;
   -ms-overflow-style: none; /* IE and Edge */
+
+  @apply text-slate-800;
 }
 
 main {
-  @apply min-h-screen w-screen;
+  @apply min-h-screen;
+}
+
+::-webkit-scrollbar {
+  display: none;
 }
 
 h1,
@@ -21,35 +24,78 @@ h2 {
 }
 
 h2 {
-  @apply font-bold text-4xl;
+  @apply text-4xl font-bold text-slate-900;
 }
 
 h3 {
-  @apply font-bold text-2xl;
+  @apply text-2xl font-bold text-slate-900;
 }
 
-::-webkit-scrollbar {
-  display: none;
+h4 {
+  @apply text-xl font-bold text-slate-900;
 }
 
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
-  }
+h5 {
+  @apply text-lg font-bold text-slate-900;
+}
+
+p {
+  @apply text-base text-slate-800;
+}
+
+a {
+  @apply text-slate-700 hover:text-sky-800;
+}
+
+label {
+  @apply text-base font-semibold;
+}
+
+button,
+.button {
+  @apply inline-flex min-w-32 cursor-pointer items-center justify-center gap-1 rounded-full px-3 py-2.5 font-semibold leading-snug transition-all duration-200 ease-in-out;
+}
+
+button:disabled {
+  @apply pointer-events-none cursor-not-allowed bg-slate-300 text-gray-500;
+}
+
+.button-primary {
+  @apply bg-sky-900 text-white opacity-95 hover:bg-sky-950 hover:text-white;
+}
+
+.button-secondary {
+  @apply border border-sky-900 bg-white text-sky-800 hover:bg-sky-900 hover:text-white;
+}
+
+.button-link {
+  @apply text-slate-800 hover:text-sky-800;
+}
+
+.button-icon {
+  @apply grid aspect-square h-10 w-10 place-items-center rounded-lg bg-slate-100 transition-colors duration-200 ease-in-out hover:bg-slate-200;
+}
+
+.link-icon {
+  @apply grid h-10 w-10 place-items-center rounded-full bg-slate-200 fill-inherit transition-colors duration-200 ease-in-out hover:bg-slate-300;
 }
 
 .toaster {
-  @apply p-2 rounded-lg;
+  @apply inline-flex min-w-72 items-center gap-4 rounded-xl p-4 shadow;
+}
+
+.toaster {
+  @apply rounded-lg p-2;
 }
 
 .toaster-loading {
-  @apply p-2 rounded-lg;
+  @apply rounded-lg p-2;
 }
 
 .toaster-error {
-  @apply p-2 rounded-lg;
+  @apply rounded-lg p-2;
 }
 
 .toaste-success {
-  @apply p-2 rounded-lg;
+  @apply rounded-lg p-2;
 }
